--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </li>
                 <!-- Nav list - References -->
                 <li class="menuListFirstLine">
-                    <a href="#" class="menuListItem first">Referencje</a>
+                    <a href="referencje.html" class="menuListItem first">Referencje</a>
                 </li>
                 <!-- Nav list - Bussiness Partnerships -->
                 <li class="menuListFirstLine menuListDrop">
