--- a/kontakt.html
+++ b/kontakt.html
@@ -108,10 +108,16 @@
             <strong>Biuro Projektów "Metroprojekt" Spółka z o.o.</strong><br> <strong>Dane adresowe: </strong><br> ul. Kosmatki 8<br> 03-982 Warszawa, Polska<br> Tel.: (0 22) 628 47 75, 628 43 35<br> Fax: (0 22) 629 97 05 <br> e-mail: <a href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
         </p>
     </section>
+
     <!-- Google Map -->
     <div class="mapouter">
         <div class="gmap_canvas"><iframe width="1070" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=kosmatki%208,%20warszawa&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
     </div>
+
+    <!-- Footer -->
+    <footer class="colorSection footerSection">
+        Copyright ©2021 - Metroprojekt.pl
+    </footer>
 
     <!-- JS -->
     <script src="./js/script.js"></script>
