delete old number

--- a/kontakt.html
+++ b/kontakt.html
@@ -104,7 +104,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            <strong>Biuro Projektów "Metroprojekt" Spółka z o.o.</strong><br> <strong>Dane adresowe: </strong><br> ul. Kosmatki 8<br> 03-982 Warszawa, Polska<br> Tel.: (0 22) 628 47 75, 628 43 35<br> Fax: (0 22) 629 97 05 <br> e-mail: <a href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+            <strong>Biuro Projektów "Metroprojekt" Spółka z o.o.</strong><br> <strong>Dane adresowe: </strong><br> ul. Kosmatki 8<br> 03-982 Warszawa, Polska<br> Tel.: (0 22) 628 47 75<br> Fax: (0 22) 629 97 05 <br> e-mail: <a href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
         </p>
     </section>
 
