--- a/konstrukcje-budowlane-i-inzynierskie.html
+++ b/konstrukcje-budowlane-i-inzynierskie.html
@@ -56,7 +56,7 @@
                         <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura kolejowa i drogowa</a></li>
                         <li><a href="uklady-komunikacyjne.html" class="menuListItem">Układy komunikacyjne</a></li>
                         <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje wodno-kanalizacyjne</a></li>
-                        <li><a href="obiekty-inzynierskie.html" class="menuListItem">Obiekty inżynierskie</a></li>
+                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje budowlane i inżynierskie</a></li>
                         <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
                         <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</a></li>
                     </ul>
@@ -98,7 +98,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Obiekty inżynierskie</h1>
+        <h1 class="h1OverImg h1OverImgLarge">Konstrukcje budowlane i inżynierskie</h1>
     </header>
 
     <!-- Section 01 -->
