--- a/zasluzeni.html
+++ b/zasluzeni.html
@@ -56,7 +56,7 @@
                         <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura kolejowa i drogowa</a></li>
                         <li><a href="uklady-komunikacyjne.html" class="menuListItem">Układy komunikacyjne</a></li>
                         <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje wodno-kanalizacyjne</a></li>
-                        <li><a href="obiekty-inzynierskie.html" class="menuListItem">Obiekty inżynierskie</a></li>
+                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje budowlane i inżynierskie</a></li>
                         <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
                         <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</a></li>
                     </ul>
