add one more btn to button section

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
     <!-- Button Section -->
     <section class="buttonSection">
         <div class="divBtn">Projektowanie</div>
-        <div class="divBtn">Wykonawstwo</div>
-        <div class="divBtn">Nadzór</div>
+        <div class="divBtn">Testowanie</div>
+        <div class="divBtn">Nadzór i zarządzanie projektem</div>
+        <div class="divBtn">Badania i rozwój</div>
     </section>
 
     <!-- Section 01 -->
