--- a/inwestorstwo-zastepcze-ekspertyzy.html
+++ b/inwestorstwo-zastepcze-ekspertyzy.html
@@ -103,40 +103,12 @@
 
     <!-- Section 01 -->
     <section class="whiteSection" id="firstId">
-        <h1>Tekst Tekst Tekst</h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 02 -->
-    <section class="colorSection">
-        <h2>Tekst Tekst Tekst</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 03 -->
-    <section class="whiteSection">
-        <h2>Tekst Tekst Tekst</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
+            Oferujemy kompleksowe wsparcie realizacji procesów inwestycyjnych, reprezentowanie Inwestora w zakresie kompleksowego przygotowania i obsługi inwestycji, przeprowadzenie przetargów na wybranie najkorzystniejszych ofert, analizę i sprawdzenie dokumentacji
+            projektowej. Specjalizujemy się w tworzeniu opracowań nietypowych, innowacyjnych, w tym specjalistycznych ekspertyz, opinii technicznych, wytycznych projektowania, instrukcji obsługi systemów, dokumentacji techniczno-ruchowych i innych form
+            dokumentacji w branżach: sterowanie ruchem kolejowym, torowej, drogowej, konstrukcyjno-budowlanej, elektroenergetycznej, sanitarnej. Oferujemy prowadzenie nadzorów autorskich, wykonawstwo zastępcze, doradztwo w zakresie projektowania i wdrażania
+            nowoczesnych systemów dla kolei i metra. Przeprowadzamy testy i badania urządzeń i systemów sterowania ruchem kolejowym. Dysponujemy zapleczem badawczo-rozwojowym oraz stale współpracujemy z największymi jednostkami naukowymi i certyfikującymi
+            w obszarze systemów kolejowych i metra.
         </p>
     </section>
 
