--- a/systemy-metra-i-szybkiego-tramwaju.html
+++ b/systemy-metra-i-szybkiego-tramwaju.html
@@ -103,40 +103,10 @@
 
     <!-- Section 01 -->
     <section class="whiteSection" id="firstId">
-        <h1>Tekst Tekst Tekst</h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 02 -->
-    <section class="colorSection">
-        <h2>Tekst Tekst Tekst</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 03 -->
-    <section class="whiteSection">
-        <h2>Tekst Tekst Tekst</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
+            Oferujemy opracowanie projektów budowlanych, projektów wykonawczych, studiów wykonalności, koncepcji programowo-przestrzennych i innych dokumentów dotyczących systemów kierowania i sterowania ruchem pojazdów metra, szybkich kolei miejskich, szybkiego
+            tramwaju i rozwiązań niekonwencjonalnych w miejskim transporcie szynowym, w tym urządzeń zewnętrznych i wewnętrznych, stacjonarnych i pokładowych. W naszej ofercie znajdują się systemy liniowe i stacyjne sterowania ruchem pojazdów, systemy
+            detekcji obiektów w strefie zagrożenia oraz systemy informacji pasażerskiej. Naszą specjalnością są najnowocześniejsze systemy prowadzenia pojazdów ATC i ATO, w tym systemy klasy CBTC na poziomach automatyzacji GoA2 i GoA3.
         </p>
     </section>
 
