--- a/systemy-sterowania-ruchem-kolejowym.html
+++ b/systemy-sterowania-ruchem-kolejowym.html
@@ -103,40 +103,12 @@
 
     <!-- Section 01 -->
     <section class="whiteSection" id="firstId">
-        <h1>Tekst Tekst Tekst</h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 02 -->
-    <section class="colorSection">
-        <h2>Tekst Tekst Tekst</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
-        </p>
-    </section>
-
-    <!-- Section 03 -->
-    <section class="whiteSection">
-        <h2>Tekst Tekst Tekst</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi autem impedit iusto velit quidem ipsam sed. Modi doloremque perspiciatis animi id, ratione similique aperiam architecto officiis quasi quis consequuntur dicta? Enim similique consequatur officia
-            consequuntur eligendi facere veritatis quis ut soluta aperiam esse exercitationem fugit, non placeat, fugiat sint aliquam voluptatum, cupiditate illum. Expedita quam optio debitis quidem ad dolorum? Aut, modi voluptas vitae doloribus quod
-            provident alias saepe odio tempora et doloremque vel laborum optio dolores id amet recusandae aspernatur. Minima vitae, nulla quae sapiente beatae excepturi? Illo, vitae? Iure sit minus odit accusamus quasi amet saepe libero sapiente vero
-            assumenda ratione, temporibus culpa labore quo adipisci tempora pariatur animi ipsum enim, error vitae, quia alias aliquid. Cupiditate, consectetur! Dignissimos eos dolorem nulla, amet dicta dolor inventore maiores deserunt doloribus, totam
-            modi eligendi magnam iste voluptas? Optio soluta quidem autem maiores repudiandae nulla, debitis possimus at dolorum! Minus, sint. Deserunt assumenda tenetur error vel nulla vitae ex odio iusto molestiae corrupti. Autem magnam esse rerum nesciunt
-            consectetur, error minus asperiores debitis praesentium, iusto nihil, culpa id suscipit cupiditate natus.
+            Oferujemy opracowanie projektów budowlanych, projektów wykonawczych, studiów wykonalności, koncepcji programowo-przestrzennych i innych dokumentów dotyczących systemów kierowania i sterowania ruchem kolejowym, w tym urządzeń zewnętrznych i wewnętrznych,
+            przekaźnikowych i komputerowych różnych typów. Specjalizujemy się w projektowaniu komputerowych systemów sterowania ruchem kolejowym stacyjnych zależnościowych i zdalnego sterowania (ILTOR-2, MOR-3, WT UZ), liniowych (blokady wbudowane, CBL2010),
+            przejazdowych oraz urządzeń ERTMS/ETCS L1 i L2. W naszej ofercie znajdują się także projekty systemów liczników osi, zasilania urządzeń srk, cyfrowej transmisji danych w systemach srk a także dokumentacje techniczno-ruchowe, wytyczne projektowania
+            i instrukcje obsługi systemów srk. Prowadzimy nadzory autorskie, przygotowujemy ekspertyzy, przeprowadzamy testy funkcjonalne urządzeń i systemów srk. Mamy unikalne doświadczenie we współpracy z różnymi zarządcami infrastruktury: PKP Polskie
+            Linie Kolejowe, PKP Szybka Kolej Miejska w Trójmieście, PKP Linia Hutnicza Szerokotorowa.
         </p>
     </section>
 
