add a href links

--- a/jednostki-naukowo-badawcze.html
+++ b/jednostki-naukowo-badawcze.html
@@ -103,25 +103,33 @@
 
     <!-- Section 01 -->
     <section class="whiteSection">
-        <div class="imgTextSection">
-            <div class="imgTextSection__Image">
-                <img src="./logo/WT-znak.jpg" alt="" width="300" height="100">
-            </div>
-            <div class="imgTextSection__Text">
-                <p>
-                    Wydział Transportu Politechniki Warszawskiej
-                </p>
-            </div>
+        <div class="linkImgTextSection">
+            <a href="https://www.wt.pw.edu.pl/" target="_blank">
+                <div class="imgTextSection">
+                    <div class="imgTextSection__Image">
+                        <img src="./logo/WT-znak.jpg" alt="" width="300" height="100">
+                    </div>
+                    <div class="imgTextSection__Text">
+                        <p>
+                            Wydział Transportu Politechniki Warszawskiej
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class="imgTextSection">
-            <div class="imgTextSection__Image">
-                <img src="./logo/SITK RP - Logo.jpg" alt="" width="300" height="100">
-            </div>
-            <div class="imgTextSection__Text">
-                <p>
-                    SITK Zarząd Krajowy
-                </p>
-            </div>
+        <div class="linkImgTextSection">
+            <a href="http://www.sitkrp.org.pl/" target="_blank">
+                <div class="imgTextSection">
+                    <div class="imgTextSection__Image">
+                        <img src="./logo/SITK RP - Logo.jpg" alt="" width="300" height="100">
+                    </div>
+                    <div class="imgTextSection__Text">
+                        <p>
+                            SITK Zarząd Krajowy
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
 
