--- a/kontrahenci.html
+++ b/kontrahenci.html
@@ -103,35 +103,47 @@
 
     <!-- Section 01 -->
     <section class="whiteSection">
-        <div class="imgTextSection">
-            <div class="imgTextSection__Image">
-                <img src="./logo/RMC_R_RGB_kolor.png" alt="" width="300" height="100">
-            </div>
-            <div class="imgTextSection__Text">
-                <p>
-                    Rail-Mil Computers Sp. z o. o.
-                </p>
-            </div>
+        <div class="linkImgTextSection">
+            <a href="http://www.rail-mil.eu/" target="_blank">
+                <div class="imgTextSection">
+                    <div class="imgTextSection__Image">
+                        <img src="./logo/RMC_R_RGB_kolor.png" alt="" width="300" height="100">
+                    </div>
+                    <div class="imgTextSection__Text">
+                        <p>
+                            Rail-Mil Computers Sp. z o. o.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class="imgTextSection">
-            <div class="imgTextSection__Image">
-                <img src="./logo/Kombud logo.png" alt="" width="300" height="100">
-            </div>
-            <div class="imgTextSection__Text">
-                <p>
-                    Zakłady Automatyki Kombud S.A.
-                </p>
-            </div>
+        <div class="linkImgTextSection">
+            <a href="https://www.kombud.com.pl/" target="_blank">
+                <div class="imgTextSection">
+                    <div class="imgTextSection__Image">
+                        <img src="./logo/Kombud logo.png" alt="" width="300" height="100">
+                    </div>
+                    <div class="imgTextSection__Text">
+                        <p>
+                            Zakłady Automatyki Kombud S.A.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class="imgTextSection">
-            <div class="imgTextSection__Image">
-                <img src="./logo/Gradiens_logo.png" alt="" width="300" height="100">
-            </div>
-            <div class="imgTextSection__Text">
-                <p>
-                    Gradiens Sp. z o.o.
-                </p>
-            </div>
+        <div class="linkImgTextSection">
+            <a href="http://gradiens.pl/" target="_blank">
+                <div class="imgTextSection">
+                    <div class="imgTextSection__Image">
+                        <img src="./logo/Gradiens_logo.png" alt="" width="300" height="100">
+                    </div>
+                    <div class="imgTextSection__Text">
+                        <p>
+                            Gradiens Sp. z o.o.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
 
