--- a/nasi-klienci.html
+++ b/nasi-klienci.html
@@ -103,35 +103,47 @@
 
     <!-- Section 01 -->
     <section class="whiteSection">
-        <div class="imgTextSection">
-            <div class="imgTextSection__Image">
-                <img src="./logo/PKP_Pełne.png" alt="" width="300" height="100">
-            </div>
-            <div class="imgTextSection__Text">
-                <p>
-                    PKP Polskie Linie Kolejowe S. A.
-                </p>
-            </div>
+        <div class="linkImgTextSection">
+            <a href="https://www.pkp.pl/" target="_blank">
+                <div class="imgTextSection">
+                    <div class="imgTextSection__Image">
+                        <img src="./logo/PKP_Pełne.png" alt="" width="300" height="100">
+                    </div>
+                    <div class="imgTextSection__Text">
+                        <p>
+                            PKP Polskie Linie Kolejowe S. A.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class="imgTextSection">
-            <div class="imgTextSection__Image">
-                <img src="./logo/Metro_Warszawskie_logo_02.png" alt="" width="300" height="100">
-            </div>
-            <div class="imgTextSection__Text">
-                <p>
-                    Metro Warszawskie Sp. z o. o.
-                </p>
-            </div>
+        <div class="linkImgTextSection">
+            <a href="https://www.metro.waw.pl/" target="_blank">
+                <div class="imgTextSection">
+                    <div class="imgTextSection__Image">
+                        <img src="./logo/Metro_Warszawskie_logo_02.png" alt="" width="300" height="100">
+                    </div>
+                    <div class="imgTextSection__Text">
+                        <p>
+                            Metro Warszawskie Sp. z o. o.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
-        <div class="imgTextSection">
-            <div class="imgTextSection__Image">
-                <img src="./logo/logo skm pełne.png" alt="" width="300" height="100">
-            </div>
-            <div class="imgTextSection__Text">
-                <p>
-                    Szybka Kolej Miejska w Trójmieście Sp. z o. o.
-                </p>
-            </div>
+        <div class="linkImgTextSection">
+            <a href="https://www.skm.pkp.pl/" target="_blank">
+                <div class="imgTextSection">
+                    <div class="imgTextSection__Image">
+                        <img src="./logo/logo skm pełne.png" alt="" width="300" height="100">
+                    </div>
+                    <div class="imgTextSection__Text">
+                        <p>
+                            Szybka Kolej Miejska w Trójmieście Sp. z o. o.
+                        </p>
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
 
