change href link

--- a/nasi-klienci.html
+++ b/nasi-klienci.html
@@ -104,7 +104,7 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <div class="linkImgTextSection">
-            <a href="https://www.pkp.pl/" target="_blank">
+            <a href="https://www.plk-sa.pl/" target="_blank">
                 <div class="imgTextSection">
                     <div class="imgTextSection__Image">
                         <img src="./logo/plk.jpg" alt="" width="300" height="100">
