update google map

--- a/kontakt.html
+++ b/kontakt.html
@@ -112,7 +112,8 @@
 
     <!-- Google Map -->
     <div class="mapouter">
-        <div class="gmap_canvas"><iframe width="1070" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=kosmatki%208,%20warszawa&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
+        <div class="gmap_canvas"><iframe width="1070" height="500" id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39121.822436749615!2d21.002377847024192!3d52.20497756829007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6323195a20d928fb!2sMetroprojekt%20Sp.%20z%20o.o.%20Biuro%20projekt%C3%B3w!5e0!3m2!1spl!2spl!4v1622053725046!5m2!1spl!2spl"
+                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
     </div>
 
     <!-- Footer -->
