add span to geader img text

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg">Profesjonalne biuro projektowe<a class="button01" href="#firstId">Czytaj więcej</a></h1>
+        <h1 class="h1OverImg"><span>Świadczymy kompleksowe usługi projektowe i służymy naszym klientom od przeszło 70 lat.</span></h1>
     </header>
 
     <!-- Button Section -->
