update footer and and new css styles

--- a/kontakt.html
+++ b/kontakt.html
@@ -118,9 +118,6 @@
 
     <!-- Footer -->
     <footer class="colorSection footerSection">
-        <div class="footerCopyright">
-            Copyright © 2021 - Metroprojekt.pl
-        </div>
         <div class="footerFlexSection">
             <div class="footerFlexSection__One">
                 <img class="footerFlexSection__Img" src="./img/zas.jpg" alt="" width="80" height="100">
@@ -129,9 +126,12 @@
             </div>
             <div class="footerFlexSection__Two">
                 <p class="footerp">
-                    <strong>Biuro Projektów "Metroprojekt" Spółka z o.o.</strong><br> ul. Kosmatki 8<br> 03-982 Warszawa, Polska<br> Tel.: (0 22) 628 47 75<br> Fax: (0 22) 629 97 05 <br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
+                    <strong>Biuro Projektów "Metroprojekt" sp. z o.o.</strong><br> 03-982 Warszawa, ul. Kosmatki 8<br> tel.: (0 22) 628 47 75 / fax: (0 22) 629 97 05 <br> e-mail: <a class="footerLink" href="mailto:biuro@metroprojekt.pl">biuro@metroprojekt.pl</a>
                 </p>
             </div>
+        </div>
+        <div class="footerCopyright">
+            Copyright © 2021 - Biuro Projektów "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
