correct h1overimage large css and fix all templates

--- a/infrastruktura-kolejowa-i-drogowa.html
+++ b/infrastruktura-kolejowa-i-drogowa.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Infrastruktura kolejowa i drogowa</h1>
+        <h1 class="h1OverImgLarge"><span>Infrastruktura kolejowa i drogowa</span></h1>
     </header>
 
     <!-- Section 01 -->
