--- a/inwestorstwo-zastepcze-ekspertyzy.html
+++ b/inwestorstwo-zastepcze-ekspertyzy.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</h1>
+        <h1 class="h1OverImgLarge"><span>Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</span></h1>
     </header>
 
     <!-- Section 01 -->
