--- a/jednostki-naukowo-badawcze.html
+++ b/jednostki-naukowo-badawcze.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Jednostki naukowo-badawcze</h1>
+        <h1 class="h1OverImgLarge"><span>Jednostki naukowo-badawcze</span></h1>
     </header>
 
     <!-- Section 01 -->
