--- a/konstrukcje-budowlane-i-inzynierskie.html
+++ b/konstrukcje-budowlane-i-inzynierskie.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Konstrukcje budowlane i inżynierskie</h1>
+        <h1 class="h1OverImgLarge"><span>Konstrukcje budowlane i inżynierskie</span></h1>
     </header>
 
     <!-- Section 01 -->
