--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Możliwości współpracy</h1>
+        <h1 class="h1OverImgLarge"><span>Możliwości współpracy</span></h1>
     </header>
 
     <!-- Section 01 -->
