--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Oferty pracy</h1>
+        <h1 class="h1OverImgLarge"><span>Oferty pracy</span></h1>
     </header>
 
     <!-- Section 01 -->
