--- a/referencje.html
+++ b/referencje.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Referencje</h1>
+        <h1 class="h1OverImgLarge"><span>Referencje</span></h1>
     </header>
 
     <!-- Section 01 -->
