--- a/systemy-sterowania-ruchem-kolejowym.html
+++ b/systemy-sterowania-ruchem-kolejowym.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Systemy sterowania ruchem kolejowym</h1>
+        <h1 class="h1OverImgLarge"><span>Systemy sterowania ruchem kolejowym</span></h1>
     </header>
 
     <!-- Section 01 -->
