--- a/kontakt.html
+++ b/kontakt.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Kontakt</h1>
+        <h1 class="h1OverImgLarge"><span>Kontakt</span></h1>
     </header>
 
     <!-- Section 01 -->
