--- a/kontrahenci.html
+++ b/kontrahenci.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Kontrahenci</h1>
+        <h1 class="h1OverImgLarge"><span>Kontrahenci</span></h1>
     </header>
 
     <!-- Section 01 -->
