--- a/nasi-klienci.html
+++ b/nasi-klienci.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Nasi klienci</h1>
+        <h1 class="h1OverImgLarge"><span>Nasi klienci</span></h1>
     </header>
 
     <!-- Section 01 -->
