--- a/sieci-i-instalacje-wodnokanalizacyjne.html
+++ b/sieci-i-instalacje-wodnokanalizacyjne.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Sieci i instalacje wodno-kanalizacyjne</h1>
+        <h1 class="h1OverImgLarge"><span>Sieci i instalacje wodno-kanalizacyjne</span></h1>
     </header>
 
     <!-- Section 01 -->
