--- a/systemy-metra-i-szybkiego-tramwaju.html
+++ b/systemy-metra-i-szybkiego-tramwaju.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Systemy metra i szybkiego tramwaju</h1>
+        <h1 class="h1OverImgLarge"><span>Systemy metra i szybkiego tramwaju</span></h1>
     </header>
 
     <!-- Section 01 -->
