--- a/uklady-komunikacyjne.html
+++ b/uklady-komunikacyjne.html
@@ -94,7 +94,7 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg h1OverImgLarge">Układy komunikacyjne</h1>
+        <h1 class="h1OverImgLarge"><span>Układy komunikacyjne</span></h1>
     </header>
 
     <!-- Section 01 -->
